// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Level should render with a lock button 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LevelBubble
    currentLevel={1}
    index={0}
    level={
      Object {
        "__typename": "Level",
        "id": "123",
        "isActive": false,
        "isChestLevel": false,
        "isDone": false,
        "isNext": false,
        "level": 3,
        "levelChestId": "123",
        "name": "name",
        "nextAvailableAt": "30",
        "onPress": [MockFunction],
        "rating": 1,
        "slots": Array [
          Object {
            "__typename": "LevelSlot",
            "availableAtLevel": 7,
            "challengesDetails": Array [],
            "id": "YU_LEVEL_0151_0",
            "milestones": Array [],
            "passive": null,
            "rating": null,
            "subtype": "brisk walk",
            "timeLimit": 600,
            "type": "move",
            "unit": "steps",
            "yuCoinAwarded": null,
          },
        ],
      }
    }
    slice={
      Object {
        "episodeSettings": Object {
          "offset": 0,
          "topBarType": "forest",
        },
        "id": "MAP_SLICE_W01E00",
        "image": 1,
        "slots": Array [
          Object {
            "index": 1,
            "left": 187,
            "top": 8,
          },
        ],
        "topBarType": "forest",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        null,
        null,
        <View
          style={
            Object {
              "alignItems": "center",
              "borderRadius": 100,
              "height": 100,
              "justifyContent": "center",
              "left": 374,
              "marginLeft": -50,
              "overflow": "hidden",
              "position": "absolute",
              "top": 16,
              "width": 100,
            }
          }
        >
          <TouchableOpacityWithState
            hitSlop={
              Object {
                "bottom": 20,
                "left": 20,
                "right": 20,
                "top": 20,
              }
            }
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "width": 100,
              }
            }
            testID="LEVEL_CHALLENGE_BUTTON_3"
          >
            <Lock
              colour="rgb(73, 133, 193)"
            />
          </TouchableOpacityWithState>
        </View>,
      ],
    },
    "ref": null,
    "rendered": Array [
      null,
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <TouchableOpacityWithState
            hitSlop={
              Object {
                "bottom": 20,
                "left": 20,
                "right": 20,
                "top": 20,
              }
            }
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "width": 100,
              }
            }
            testID="LEVEL_CHALLENGE_BUTTON_3"
          >
            <Lock
              colour="rgb(73, 133, 193)"
            />
          </TouchableOpacityWithState>,
          "style": Object {
            "alignItems": "center",
            "borderRadius": 100,
            "height": 100,
            "justifyContent": "center",
            "left": 374,
            "marginLeft": -50,
            "overflow": "hidden",
            "position": "absolute",
            "top": 16,
            "width": 100,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Lock
              colour="rgb(73, 133, 193)"
            />,
            "hitSlop": Object {
              "bottom": 20,
              "left": 20,
              "right": 20,
              "top": 20,
            },
            "onPress": [MockFunction],
            "style": Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "borderRadius": 100,
              "height": 100,
              "justifyContent": "center",
              "width": 100,
            },
            "testID": "LEVEL_CHALLENGE_BUTTON_3",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "colour": "rgb(73, 133, 193)",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          null,
          null,
          <View
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "left": 374,
                "marginLeft": -50,
                "overflow": "hidden",
                "position": "absolute",
                "top": 16,
                "width": 100,
              }
            }
          >
            <TouchableOpacityWithState
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderRadius": 100,
                  "height": 100,
                  "justifyContent": "center",
                  "width": 100,
                }
              }
              testID="LEVEL_CHALLENGE_BUTTON_3"
            >
              <Lock
                colour="rgb(73, 133, 193)"
              />
            </TouchableOpacityWithState>
          </View>,
        ],
      },
      "ref": null,
      "rendered": Array [
        null,
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <TouchableOpacityWithState
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderRadius": 100,
                  "height": 100,
                  "justifyContent": "center",
                  "width": 100,
                }
              }
              testID="LEVEL_CHALLENGE_BUTTON_3"
            >
              <Lock
                colour="rgb(73, 133, 193)"
              />
            </TouchableOpacityWithState>,
            "style": Object {
              "alignItems": "center",
              "borderRadius": 100,
              "height": 100,
              "justifyContent": "center",
              "left": 374,
              "marginLeft": -50,
              "overflow": "hidden",
              "position": "absolute",
              "top": 16,
              "width": 100,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Lock
                colour="rgb(73, 133, 193)"
              />,
              "hitSlop": Object {
                "bottom": 20,
                "left": 20,
                "right": 20,
                "top": 20,
              },
              "onPress": [MockFunction],
              "style": Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "width": 100,
              },
              "testID": "LEVEL_CHALLENGE_BUTTON_3",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "colour": "rgb(73, 133, 193)",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Level should render with a pulse 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LevelBubble
    currentLevel={1}
    index={0}
    level={
      Object {
        "__typename": "Level",
        "id": "123",
        "isActive": true,
        "isChestLevel": false,
        "isDone": false,
        "isNext": false,
        "level": 1,
        "levelChestId": "123",
        "name": "name",
        "nextAvailableAt": "30",
        "onPress": [MockFunction],
        "rating": 1,
        "slots": Array [
          Object {
            "__typename": "LevelSlot",
            "availableAtLevel": 7,
            "challengesDetails": Array [],
            "id": "YU_LEVEL_0151_0",
            "milestones": Array [],
            "passive": null,
            "rating": null,
            "subtype": "brisk walk",
            "timeLimit": 600,
            "type": "move",
            "unit": "steps",
            "yuCoinAwarded": null,
          },
        ],
      }
    }
    slice={
      Object {
        "episodeSettings": Object {
          "offset": 0,
          "topBarType": "forest",
        },
        "id": "MAP_SLICE_W01E00",
        "image": 1,
        "slots": Array [
          Object {
            "index": 1,
            "left": 187,
            "top": 8,
          },
        ],
        "topBarType": "forest",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": Array [
        <Pulse
          backgroundColor="rgb(145,0,76)"
          interval={750}
          pulseMaxSize={132}
          size={106}
          style={
            Object {
              "left": 374,
              "top": 16,
            }
          }
        />,
        null,
        <View
          style={
            Object {
              "alignItems": "center",
              "borderRadius": 100,
              "height": 100,
              "justifyContent": "center",
              "left": 374,
              "marginLeft": -50,
              "overflow": "hidden",
              "position": "absolute",
              "top": 16,
              "width": 100,
            }
          }
        >
          <TouchableOpacityWithState
            hitSlop={
              Object {
                "bottom": 20,
                "left": 20,
                "right": 20,
                "top": 20,
              }
            }
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(226, 1, 119)",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "width": 100,
              }
            }
            testID="LEVEL_CHALLENGE_BUTTON_1"
          >
            <YuText
              bold={true}
              style={
                Object {
                  "color": "#ffffff",
                  "fontSize": 38,
                  "lineHeight": 38,
                }
              }
            >
              1
            </YuText>
          </TouchableOpacityWithState>
        </View>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "backgroundColor": "rgb(145,0,76)",
          "interval": 750,
          "pulseMaxSize": 132,
          "size": 106,
          "style": Object {
            "left": 374,
            "top": 16,
          },
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <TouchableOpacityWithState
            hitSlop={
              Object {
                "bottom": 20,
                "left": 20,
                "right": 20,
                "top": 20,
              }
            }
            onPress={[MockFunction]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "rgb(226, 1, 119)",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "width": 100,
              }
            }
            testID="LEVEL_CHALLENGE_BUTTON_1"
          >
            <YuText
              bold={true}
              style={
                Object {
                  "color": "#ffffff",
                  "fontSize": 38,
                  "lineHeight": 38,
                }
              }
            >
              1
            </YuText>
          </TouchableOpacityWithState>,
          "style": Object {
            "alignItems": "center",
            "borderRadius": 100,
            "height": 100,
            "justifyContent": "center",
            "left": 374,
            "marginLeft": -50,
            "overflow": "hidden",
            "position": "absolute",
            "top": 16,
            "width": 100,
          },
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <YuText
              bold={true}
              style={
                Object {
                  "color": "#ffffff",
                  "fontSize": 38,
                  "lineHeight": 38,
                }
              }
            >
              1
            </YuText>,
            "hitSlop": Object {
              "bottom": 20,
              "left": 20,
              "right": 20,
              "top": 20,
            },
            "onPress": [MockFunction],
            "style": Object {
              "alignItems": "center",
              "backgroundColor": "rgb(226, 1, 119)",
              "borderRadius": 100,
              "height": 100,
              "justifyContent": "center",
              "width": 100,
            },
            "testID": "LEVEL_CHALLENGE_BUTTON_1",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "bold": true,
              "children": 1,
              "style": Object {
                "color": "#ffffff",
                "fontSize": 38,
                "lineHeight": 38,
              },
            },
            "ref": null,
            "rendered": 1,
            "type": [Function],
          },
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": Symbol(react.fragment),
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": Array [
          <Pulse
            backgroundColor="rgb(145,0,76)"
            interval={750}
            pulseMaxSize={132}
            size={106}
            style={
              Object {
                "left": 374,
                "top": 16,
              }
            }
          />,
          null,
          <View
            style={
              Object {
                "alignItems": "center",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "left": 374,
                "marginLeft": -50,
                "overflow": "hidden",
                "position": "absolute",
                "top": 16,
                "width": 100,
              }
            }
          >
            <TouchableOpacityWithState
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(226, 1, 119)",
                  "borderRadius": 100,
                  "height": 100,
                  "justifyContent": "center",
                  "width": 100,
                }
              }
              testID="LEVEL_CHALLENGE_BUTTON_1"
            >
              <YuText
                bold={true}
                style={
                  Object {
                    "color": "#ffffff",
                    "fontSize": 38,
                    "lineHeight": 38,
                  }
                }
              >
                1
              </YuText>
            </TouchableOpacityWithState>
          </View>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "backgroundColor": "rgb(145,0,76)",
            "interval": 750,
            "pulseMaxSize": 132,
            "size": 106,
            "style": Object {
              "left": 374,
              "top": 16,
            },
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <TouchableOpacityWithState
              hitSlop={
                Object {
                  "bottom": 20,
                  "left": 20,
                  "right": 20,
                  "top": 20,
                }
              }
              onPress={[MockFunction]}
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "rgb(226, 1, 119)",
                  "borderRadius": 100,
                  "height": 100,
                  "justifyContent": "center",
                  "width": 100,
                }
              }
              testID="LEVEL_CHALLENGE_BUTTON_1"
            >
              <YuText
                bold={true}
                style={
                  Object {
                    "color": "#ffffff",
                    "fontSize": 38,
                    "lineHeight": 38,
                  }
                }
              >
                1
              </YuText>
            </TouchableOpacityWithState>,
            "style": Object {
              "alignItems": "center",
              "borderRadius": 100,
              "height": 100,
              "justifyContent": "center",
              "left": 374,
              "marginLeft": -50,
              "overflow": "hidden",
              "position": "absolute",
              "top": 16,
              "width": 100,
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <YuText
                bold={true}
                style={
                  Object {
                    "color": "#ffffff",
                    "fontSize": 38,
                    "lineHeight": 38,
                  }
                }
              >
                1
              </YuText>,
              "hitSlop": Object {
                "bottom": 20,
                "left": 20,
                "right": 20,
                "top": 20,
              },
              "onPress": [MockFunction],
              "style": Object {
                "alignItems": "center",
                "backgroundColor": "rgb(226, 1, 119)",
                "borderRadius": 100,
                "height": 100,
                "justifyContent": "center",
                "width": 100,
              },
              "testID": "LEVEL_CHALLENGE_BUTTON_1",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "bold": true,
                "children": 1,
                "style": Object {
                  "color": "#ffffff",
                  "fontSize": 38,
                  "lineHeight": 38,
                },
              },
              "ref": null,
              "rendered": 1,
              "type": [Function],
            },
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": Symbol(react.fragment),
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
